fix: remove overflow scrollbar behavior

--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -40,7 +40,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  overflow-y: auto;
+  /* overflow-y: auto; */
 }
 
 .background__info {
@@ -58,8 +58,7 @@
 
 @media (min-width: 320px) {
   .background__info-container {
-    /* overflow-y: visible; */
-    overflow-y: auto;
+    /* overflow-y: auto; */
   }
 }
 
@@ -67,10 +66,6 @@
   .background__details {
     padding: 0;
     flex-direction: row;
-  }
-
-  .background__info {
-    /* text-align: justify; */
   }
 
   .background__photo {
@@ -86,6 +81,6 @@
 
 @media screen and (orientation: landscape) {
   .background__info-container {
-    overflow-y: auto;
+    /* overflow-y: auto; */
   }
 }
